--- a/new.html
+++ b/new.html
@@ -7,8 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>ha g ky hal chal 
-        
+    <h2>ha g ky hag s hal chal 
+
     </h2>
 </body>
 </html>
